# binance-data-loader

./: AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
examples/: download_futures_data.py  download_spot_data.py  load_and_resample.py
src/binance_data/: __init__.py  downloader.py  processor.py
src/binance_data_loader/: __init__.py  downloader.py  loader.py  metadata.py  processor.py  types.py  utils.py
src/binance_data_loader/processors/: __init__.py  aggtrades.py  base.py  bookdepth.py  klines.py
