[project]
name = "binance-data"
version = "0.1.0"
description = "A Python library for downloading and processing Binance Vision historical data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandera>=0.28.0",
    "polars>=1.0.0",
    "requests>=2.32.5",
    "tqdm>=4.66.0",
    "xmltodict>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/binance_data"]
